--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+     <script src="https://kit.fontawesome.com/25e85b6990.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
