--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+     <link rel="icon" href="./imgs/logo.PNG" type="image/x-icon" />   
+    <title>Wenyi Sun Porfolio</title>
   </head>
   <body>
     <div id="root"></div>
