--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
      <link rel="icon" href="./imgs/logo.PNG" type="image/x-icon" />   
-    <title>Wenyi Sun Porfolio</title>
+    <title>Wenyi Sun Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
